fixed horizontal scroll

--- a/src/app/features/contact/contact.component.css
+++ b/src/app/features/contact/contact.component.css
@@ -11,7 +11,7 @@
 }
 
 .form-style {
-  padding: inherit;
+  padding: 1em;
   border-style: groove;
 }
 
