--- a/src/app/features/home/home.component.css
+++ b/src/app/features/home/home.component.css
@@ -21,8 +21,7 @@
 }
 
 .h2-card2 {
-  text-align: left;
-  padding-right: 30%;
+  text-align: right;
   padding-bottom: 1em;
 }
 
